added a draft about us page with matching style to the homepage

--- a/src/main/frontend/index.html
+++ b/src/main/frontend/index.html
@@ -35,7 +35,7 @@
       <div class="container hero-grid">
         <div class="hero-copy">
           <h1>Safer, clearer OTC advice</h1>
-          <p>Structured WWHAM questions, interaction checks, and plain-language guidance—built for UK self-care and pharmacy handoff.</p>
+          <p>Structured WWHAM questions, interaction checks, and plain language guidance built for UK self-care and pharmacy handoff.</p>
           <div class="hero-cta">
             <a class="btn btn-primary" href="#start">Start symptom check</a>
             <a class="btn btn-ghost" href="#how">See how it works</a>
@@ -65,14 +65,14 @@
             <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3a5 5 0 110 10 5 5 0 010-10zm-9 18a9 9 0 1118 0H3z"/></svg>
           </div>
           <h3>Intake (WWHAM)</h3>
-          <p>Who, What, How long, Action taken, Medication—captured through a guided, mobile-friendly form.</p>
+          <p>Who, What, How long, Action taken, Medication captured through a guided, mobile friendly form.</p>
         </article>
         <article class="card step">
           <div class="step-icon">
             <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4 4h16v4H4zM4 10h16v4H4zM4 16h10v4H4z"/></svg>
           </div>
           <h3>Rules & safety</h3>
-          <p>Maps symptoms to OTC classes, filters out contraindications, and flags red-flags for pharmacist/GP referral.</p>
+          <p>Maps symptoms to OTC classes, filters out contraindications, and flags red flags for pharmacist/GP referral.</p>
         </article>
         <article class="card step">
           <div class="step-icon">
@@ -151,7 +151,7 @@
       <nav class="footer-nav">
         <a href="#help">Help</a>
         <a href="#">Contact</a>
-        <a href="#">About</a>
+        <li><a class="active" href="about.html" aria-current="page">About</a></li>
       </nav>
     </div>
   </footer>
