added a draft contact page

--- a/src/main/frontend/index.html
+++ b/src/main/frontend/index.html
@@ -150,7 +150,7 @@
       <small>&copy; TechChallenge. Educational prototype.</small>
       <nav class="footer-nav">
         <a href="#help">Help</a>
-        <a href="#">Contact</a>
+        <li><a class="active" href="contact.html" aria-current="page">Contact</a></li>
         <li><a class="active" href="about.html" aria-current="page">About</a></li>
       </nav>
     </div>
