recommiting as previous files didnt change

--- a/src/main/frontend/index.html
+++ b/src/main/frontend/index.html
@@ -149,9 +149,11 @@
     <div class="container footer-grid">
       <small>&copy; TechChallenge. Educational prototype.</small>
       <nav class="footer-nav">
-        <a href="#help">Help</a>
-        <li><a class="active" href="contact.html" aria-current="page">Contact</a></li>
-        <li><a class="active" href="about.html" aria-current="page">About</a></li>
+        <ul>
+            <li><a href="#help">Help</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
       </nav>
     </div>
   </footer>
