fixed check button on homepage

--- a/src/main/frontend/index.html
+++ b/src/main/frontend/index.html
@@ -37,7 +37,7 @@
           <h1>Safer, clearer OTC advice</h1>
           <p>Structured WWHAM questions, interaction checks, and plain language guidance built for UK self-care and pharmacy handoff.</p>
           <div class="hero-cta">
-            <a class="btn btn-primary" href="#start">Start symptom check</a>
+            <a id="start-check" class="btn" href="check.html">Start symptom check</a>
             <a class="btn btn-ghost" href="#how">See how it works</a>
           </div>
           <ul class="trust-points" aria-label="Key assurances">
@@ -125,7 +125,7 @@
       <div class="cta-card card">
         <h2>Ready to begin?</h2>
         <p>Start the WWHAM intake to get tailored OTC guidance.</p>
-        <a href="#" class="btn btn-primary">Start symptom check</a>
+        <a id="start-check" class="btn" href="check.html">Start symptom check</a>
       </div>
     </section>
 
