cleaned up and updated chat

--- a/src/main/frontend/about.html
+++ b/src/main/frontend/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — TechChallenge</title>
-  <meta name="description" content="About the TechChallenge OTC Medication Advisor project." />
+  <title>About — Pharmalogic</title>
+  <meta name="description" content="About the Pharmalogic OTC Medication Advisor project." />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -14,9 +14,9 @@
 
   <header class="site-header">
     <nav class="nav container">
-      <a class="brand" href="index.html" aria-label="TechChallenge home">
+  <a class="brand" href="index.html" aria-label="Pharmalogic home">
         <svg class="logo" viewBox="0 0 24 24" aria-hidden="true"><path d="M10 2h4v6h6v4h-6v6h-4v-6H4V8h6V2z"/></svg>
-        <span>TechChallenge</span>
+  <span>Pharmalogic</span>
       </a>
 
       <button class="nav-toggle" aria-expanded="false" aria-controls="menu">Menu</button>
@@ -32,8 +32,8 @@
 
   <main id="main" class="section container">
     <div class="card prose">
-      <h2>About TechChallenge</h2>
-      <p><strong>TechChallenge</strong> is an educational prototype to support safer over-the-counter (OTC) decisions in the UK. It guides users through the WWHAM intake, applies safety filters (contraindications, interactions, red flags), and presents clear explanations.</p>
+  <h2>About Pharmalogic</h2>
+  <p><strong>Pharmalogic</strong> is an educational prototype to support safer over-the-counter (OTC) decisions in the UK. It guides users through the WWHAM intake, applies safety filters (contraindications, interactions, red flags), and presents clear explanations.</p>
 
       <h3>What the app does</h3>
       <ul>
@@ -63,7 +63,7 @@
 
   <footer class="site-footer">
     <div class="container footer-grid">
-      <small>&copy; TechChallenge. Educational prototype.</small>
+  <small>&copy; Pharmalogic. Educational prototype.</small>
       <nav class="footer-nav">
         <a href="index.html#help">Help</a>
         <a href="index.html#contact">Contact</a>
