--- a/src/main/frontend/contact.html
+++ b/src/main/frontend/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — TechChallenge</title>
-  <meta name="description" content="Contact the TechChallenge team." />
+  <title>Contact — Pharmalogic</title>
+  <meta name="description" content="Contact the Pharmalogic team." />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -14,9 +14,9 @@
 
   <header class="site-header">
     <nav class="nav container">
-      <a class="brand" href="index.html" aria-label="TechChallenge home">
+  <a class="brand" href="index.html" aria-label="Pharmalogic home">
         <svg class="logo" viewBox="0 0 24 24" aria-hidden="true"><path d="M10 2h4v6h6v4h-6v6h-4v-6H4V8h6V2z"/></svg>
-        <span>TechChallenge</span>
+  <span>Pharmalogic</span>
       </a>
 
       <button class="nav-toggle" aria-expanded="false" aria-controls="menu">Menu</button>
@@ -107,7 +107,7 @@
       <aside class="card contact-side">
         <h3>Direct contact</h3>
         <p>Temporary number (UK): <strong>01632 960123</strong></p>
-        <p>Email: <a href="mailto:contact@techchallenge.example">contact@techchallenge.example</a></p>
+  <p>Email: <a href="mailto:contact@pharmalogic.example">contact@pharmalogic.example</a></p>
 
         <div class="divider"></div>
 
@@ -122,7 +122,7 @@
 
   <footer class="site-footer">
     <div class="container footer-grid">
-      <small>&copy; TechChallenge. Educational prototype.</small>
+  <small>&copy; Pharmalogic. Educational prototype.</small>
       <nav class="footer-nav">
         <a href="index.html#help">Help</a>
         <a href="contact.html" aria-current="page">Contact</a>
