--- a/src/main/frontend/index.html
+++ b/src/main/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TechChallenge — OTC Medication Advisor</title>
+  <title>Pharmalogic — OTC Medication Advisor</title>
   <meta name="description" content="WWHAM intake, interaction checks, and clear OTC guidance aligned to UK standards." />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +15,10 @@
 
   <header class="site-header">
     <nav class="nav container">
-      <a class="brand" href="#" aria-label="TechChallenge home">
+  <a class="brand" href="#" aria-label="Pharmalogic home">
         <!-- Minimal medical cross logo -->
         <svg class="logo" viewBox="0 0 24 24" aria-hidden="true"><path d="M10 2h4v6h6v4h-6v6h-4v-6H4V8h6V2z" /></svg>
-        <span>TechChallenge</span>
+  <span>Pharmalogic</span>
       </a>
 
       <button class="nav-toggle" aria-expanded="false" aria-controls="menu">Menu</button>
@@ -147,21 +147,20 @@
 
   <footer class="site-footer">
     <div class="container footer-grid">
-      <small>&copy; TechChallenge. Educational prototype.</small>
-      <nav class="footer-nav">
-        <ul>
-            <li><a href="#help">Help</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
+      <div class="footer-left">
+        <small class="footer-copy">&copy; Pharmalogic <span class="footer-dot" aria-hidden="true">•</span> Educational prototype</small>
+      </div>
+      <nav class="footer-nav" aria-label="Footer links">
+        <ul class="footer-list">
+          <li><a href="#help">Help</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
       </nav>
     </div>
   </footer>
 
   <script src="js/app.js"></script>
-  <link rel="stylesheet" href="css/chat-enhanced.css">
-  <script src="js/agents/orchestrator.js" defer></script>
-  <script src="js/agents/chat-widget.js" defer></script>
   <script src="js/ux-enhancements.js" defer></script>
 </body>
 </html>
