--- a/src/main/frontend/results.html
+++ b/src/main/frontend/results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Medication Results</title>
+    <title>Medication Results — Pharmalogic</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/chat.css" />
     <link rel="stylesheet" href="css/check.css" />
