--- a/public/check.html
+++ b/public/check.html
@@ -77,8 +77,8 @@
   </footer>
 
   <script src="js/app.js"></script>
-  <script src="js/engine.js"></script> <!-- medication recommendation engine -->
-  <script src="js/chat-simple.js"></script> <!-- simplified conversational chat system -->
-  <script src="js/ux-enhancements.js" defer></script>
+  <script src="js/modules/engine.js"></script> <!-- medication recommendation engine -->
+  <script src="js/pages/chat.js"></script> <!-- simplified conversational chat system -->
+  <script src="js/modules/ux-enhancements.js" defer></script>
 </body>
 </html>
