--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,6 @@
   </footer>
 
   <script src="js/app.js"></script>
-  <script src="js/ux-enhancements.js" defer></script>
+  <script src="js/modules/ux-enhancements.js" defer></script>
 </body>
 </html>
