--- a/public/results.html
+++ b/public/results.html
@@ -21,10 +21,10 @@
     </main>
 
     <!-- Load dependencies first -->
-    <script src="js/state-manager.js"></script>
-    <script src="js/engine.js"></script>
+    <script src="js/modules/state-manager.js"></script>
+    <script src="js/modules/engine.js"></script>
     <!-- Results page logic -->
-    <script src="js/results.js" defer></script>
+    <script src="js/pages/results.js" defer></script>
 </body>
 <!--
 Notes:
